--- a/web/views/Venta/Fac-Ventas.xhtml
+++ b/web/views/Venta/Fac-Ventas.xhtml
@@ -34,8 +34,8 @@
                 
                 <h:form id="formMostrarVentas">
                     <p:dataTable id="tableVentas" value="#{ventaBean.listaVentas}" var="ven" emptyMessage="Sin Registros Guardados" style="align-content:center; margin-left:auto; margin-right:auto; font-style:initial; font-family:sans-serif; font-size:15px" rows="1" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" rowsPerPageTemplate="1">
-                        <p:column headerText="C.C CLiente" filterBy="#{ven.idPersona}" filterStyle="width:150px; text-align:center" filterMatchMode="contains" style="text-align:center; width:180px">
-                            <h:outputText value="#{ven.idPersona}"/>
+                        <p:column headerText="C.C CLiente" filterBy="#{ven.identificacionPersonaVenta}" filterStyle="width:150px; text-align:center" filterMatchMode="contains" style="text-align:center; width:180px">
+                            <h:outputText value="#{ventaBean.getmostrarPersona(ven.idPersona)}"/>
                         </p:column>
                         <p:column headerText="Número" filterBy="#{ven.numeracionFactura}" filterStyle="width:150px; text-align:center" filterMatchMode="contains" style="text-align:center; width:180px">
                             <h:outputText value="#{ven.numeracionFactura}">
